force-app/main/default/objects/ExhibitionCustomerAssignment__c/ExhibitionCustomerAssignment__c.object-meta.xml
<CustomObject>
    <label>Exhibition Customer Assignment</label>
    <nameField>
        <displayFormat>ECA-{0000000000}</displayFormat>
        <label>ExhibitionCustomerAssignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibition Customer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>