force-app/main/default/objects/ExhibitionCustomerAssignment__c/fields/Assignment_Index__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Index__c</fullName>
    <formula>ExhibitionCustomer__c + &apos;_&apos; +  ExhibitionArrangement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Index</label>
    <type>Text</type>
</CustomField>