force-app/main/default/objects/ExhibitionCustomerAssignment__c/fields/ExhibitionArrangement__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionArrangement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Arrangement</label>
    <referenceTo>Exhibition_Arrangement__c</referenceTo>
    <relationshipName>ExhibitionCustomerAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>