force-app/main/default/objects/ExhibitionCustomerAssignment__c/fields/ExhibitionCustomer__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionCustomer__c</fullName>
    <label>Exhibition Customer</label>
    <referenceTo>ExpoApplyInfo__c</referenceTo>
    <relationshipName>ExhibitionCustomerAssignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>