force-app/main/default/objects/ExhibitionCustomerAssignment__c/fields/logical_delete__c.field-meta.xml
<CustomField>
    <fullName>logical_delete__c</fullName>
    <label>logical_delete</label>
    <length>8</length>
    <type>Text</type>
</CustomField>