force-app/main/default/objects/ExhibitionCustomerAssignment__c/fields/ReceptionUser__c.field-meta.xml
<CustomField>
    <fullName>ReceptionUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reception User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Internal_Registration__c.Exhibition_Name_EN__c</field>
            <operation>contains</operation>
            <value>138</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Exhibition Customer Assignments</relationshipLabel>
    <relationshipName>ExhibitionCustomerAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>