force-app/main/default/objects/ExhibitionCustomerAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReceptionUser__c</columns>
    <columns>ExhibitionArrangement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>